--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,4 +1,10 @@
 <h1>chat room</h1>
+
 <div id="messages">
   <%= render @messages %>
 </div>
+
+<form>
+  <label>Say something</label>
+  <input type="text" data-behavior="room_speaker">
+</form>
