--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -5,6 +5,6 @@
 </div>
 
 <form>
-  <label>Say something</label>
+  <label> ↓ Say something ↓ </label><br>
   <input type="text" data-behavior="room_speaker">
 </form>
